<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">


    <LinearLayout
        android:id="@+id/pop_add_ll"
        style="@style/pop_ll">

        <ImageView
            style="@style/pop_iv"
            android:src="@mipmap/ic_actbar_more_menu_icon_add_firends"
            />

        <TextView
            style="@style/pop_tv"
            android:text="@string/pop_add_friend"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pop_chat_ll"
        style="@style/pop_ll">

        <ImageView
            style="@style/pop_iv"
            android:src="@mipmap/ic_actbar_more_menu_icon_create_chat"
            />

        <TextView
            style="@style/pop_tv"
            android:text="@string/pop_chat_group"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pop_email_ll"
        style="@style/pop_ll">

        <ImageView
            style="@style/pop_iv"
            android:src="@mipmap/ic_actbar_more_menu_icon_mail"
            />

        <TextView
            style="@style/pop_tv"
            android:text="@string/pop_email"
            />
    </LinearLayout>

</LinearLayout>