<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/search_rl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/search_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/click_selector"
            android:src="@mipmap/ic_actbar_back"/>

        <com.hr.han.ui.view.ClearEditText
            android:id="@+id/search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/search_back_iv"
            android:drawableLeft="@mipmap/ic_actbar_search_blue"
            android:hint="搜索"
            android:textColor="@color/black_trans_15"
            android:textColorHint="@android:color/darker_gray"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/search_result_more_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/search_result_more_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/search_result"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/search_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/search_result_more_tv"
            android:src="@mipmap/search_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/search_arrow"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/search_result_more"
            android:textColor="@color/grey_ab"
            android:textSize="14sp"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/search_result_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/search_contacts_ll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_ab"
                    android:padding="5dp"
                    android:text="@string/contacts"
                    android:textSize="14sp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:visibility="gone"
                        android:id="@+id/search_contacts_more_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                    <LinearLayout
                        android:id="@+id/search_contacts_more_ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/search_contacts_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                        </android.support.v7.widget.RecyclerView>

                        <RelativeLayout
                            android:id="@+id/search_more_rl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/click_selector">

                            <TextView
                                android:id="@+id/search_more_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:gravity="center"
                                android:padding="8dp"
                                android:text="@string/search_more"
                                android:textSize="14sp"/>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_toRightOf="@id/search_more_tv"
                                android:src="@mipmap/search_arrow"/>

                        </RelativeLayout>

                    </LinearLayout>
                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/search_message_ll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey_ab"
                    android:padding="5dp"
                    android:text="@string/search_message"
                    android:textSize="14sp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/search_message_rv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/search_normal_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey_ab"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="在这里可以搜索到"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/grey_ab"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/search_homepage_icon_contact"
                    android:gravity="center"
                    android:text="@string/search_contact"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/search_homepage_icon_group"
                    android:gravity="center"
                    android:text="@string/search_group"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/search_homepage_icon_message"
                    android:gravity="center"
                    android:text="@string/search_message"
                    android:textColor="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@mipmap/search_homepage_icon_cmail"
                    android:gravity="center"
                    android:text="@string/search_email"
                    android:textColor="@android:color/darker_gray"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>